--- a/resources/ext.contentStabilization.history.styles.css
+++ b/resources/ext.contentStabilization.history.styles.css
@@ -1,14 +1,17 @@
-.content-stabilization-not-stable {
-	background-color: #e8cc98 !important;
-}
-.content-stabilization-stable {
-	background-color: #ade3ad !important;
-}
-
 .content-stabilization-not-stable,
 .content-stabilization-stable {
 	margin-bottom: 5px;
-	border-radius: 5px;
+	border: none !important;
+	padding-left: 10px !important;
+}
+
+.content-stabilization-not-stable {
+	border-left: 3px solid #ef9802 !important;
+	background-color: rgba(239, 152, 2, 0.11) !important;
+}
+.content-stabilization-stable {
+	border-left: 3px solid #00bd00 !important;
+	background-color: rgba(0, 189, 0, 0.07) !important;
 }
 
 .content-stabilization-hidden {
